working on allure reports